Made filter options work and fix project div stretching

--- a/src/components/projectDiv/ProjectDiv.css
+++ b/src/components/projectDiv/ProjectDiv.css
@@ -7,6 +7,7 @@
   border-radius: 20px;
 
   z-index: 10;
+  max-width: 400px;
 }
 
 /* Title */
